# raspi-target-cam

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_READY.md  ITERATIVE_CALIBRATION.md  LICENSE  README.md  SYSTEM_DEPS.md  UI_UPDATES.md  activate.sh  analyze_all_detections.py  analyze_false_positive.py  analyze_false_positives.py  analyze_specific_frame.py  cam_detect.py  cam_props.py  cam_resolutions.py  cam_test.py  camera_comparison.py  camera_controls.py  camera_integration_example.py  camera_interface.html  camera_settings.py  camera_stream.py  camera_web_stream.py  camera_web_stream.py.backup  compare_consecutive_frames.py  compare_with_ground_truth.py  create_numbered_visualization.py  dark_area_detector.py  dark_sequential_detector.py  dark_sequential_results.json  dark_to_darker_detector.py  debug_darker_thresh.py  debug_missing_holes.py  debug_sources.html  defaults.json  demo_camera_controls.py  detect_localized_change.py  enhanced_bullet_detector.py  (+59 more)
CAD/: camera-mount.FCStd
docs/: CHECKERBOARD_CALIBRATION.md  FEATURES_ADDED.md  FIX_SOURCE_SWITCHING.md  INTEGRATION_COMPLETE.md  INTEGRATION_ISSUES.md  INTEGRATION_STATUS.md  THREADED_CAPTURE_USAGE.md
legacy/: start_streaming.py  web_server.py
presets/: pre_1.json  pre_2.json
scoring_sessions/: session_20251102_164918.json  session_20251102_165046.json  session_20251102_165333.json  session_20251102_170011.json  session_20251102_170031.json  session_20251102_170053.json  session_20251102_170212.json  session_20251102_170221.json  session_20251102_170230.json  session_20251102_170237.json  session_20251102_170939.json
scripts/: create_numbered_visualization.py  create_test_frames.py  debug_darker_thresh.py  debug_missing_holes.py  detect_localized_change.py  find_first_shot.py  fix_camera_controls.py  robust_ellipse_detection_suggestions.py  stress_test_segfault.py  verify_improved_detection.py
tests/: test_bullet_holes.py  test_bullet_holes_enhanced.py  test_bullet_holes_final.py  (+20 more)
(+41 files in other folders)
